--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imgur: The magic of the Internet              imgur.com</title>
     <link rel="stylesheet" href="./navbar.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body style="font-family: sans-serif;">
    <div class="main"> 
@@ -83,7 +84,14 @@
              </div>
         </div>
        </div>
+       <div>
+           <div>There are more planes in the ocean than submarines in the sky.</div>
+           <div>EXPLORE TAGS</div>
+           <div id="tagsDiv">
+           </div>
+       </div>
    </div>
 </body>
 </html>
 <script src="./components/navbar.js"></script>
+<script src="./index.js"></script>
