--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./navbar.css">
     <link rel="stylesheet" href="./index.css">
 </head>
-<body style="font-family: sans-serif;">
+<body style="font-family: sans-serif; background-color: #2e3035;">
    <div class="main"> 
        <div class="navbar">
         <div class="mainDiv">
@@ -84,11 +84,30 @@
              </div>
         </div>
        </div>
+       <div class="tag_sec">
+           <h2 class="tag_head">There are more planes in the ocean than submarines in the sky.</h2>
+           <div style="font-size: 16px; color: white; line-height: 16px; font-weight: 700; margin-bottom: 15px;" >EXPLORE TAGS</div>
+           <div id="tagsDiv"></div>
+       </div>
        <div>
-           <div>There are more planes in the ocean than submarines in the sky.</div>
-           <div>EXPLORE TAGS</div>
-           <div id="tagsDiv">
+           <div class="filter">
+               <div id="most_viral">
+                    <div style="color: white; font-size: 18px; font-weight: 600;">MOST VIRAL</div>
+                    <span style="font-size: 40px; color: aliceblue;"  class="material-symbols-outlined">arrow_drop_down</span>
+               </div>
+               <div id="filters">
+                   <div id="popular">
+                       <div style="color: white; font-size: 18px; font-weight: 600;">POPULAR</div>
+                       <span style="font-size: 40px; color: aliceblue;"  class="material-symbols-outlined">arrow_drop_down</span>
+                   </div>
+                   <div id="filters_all">
+                       <div><span style="font-size: 30px; color: gray;"  class="material-symbols-outlined">filter_list</span></div>
+                       <div><span style="font-size: 30px; color: gray;"  class="material-symbols-outlined">smart_screen</span></div>
+                       <div><span style="font-size: 30px; color: gray;"  class="material-symbols-outlined">grid_view</span></div>
+                   </div>
+               </div>
            </div>
+           <div></div>
        </div>
    </div>
 </body>
