--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
            <div style="font-size: 16px; color: white; line-height: 16px; font-weight: 700; margin-bottom: 15px;" >EXPLORE TAGS</div>
            <div id="tagsDiv"></div>
        </div>
-       <div>
+       <div class="body_">
            <div class="filter">
                <div id="most_viral">
                     <div style="color: white; font-size: 18px; font-weight: 600;">MOST VIRAL</div>
@@ -107,7 +107,9 @@
                    </div>
                </div>
            </div>
-           <div></div>
+           <div id="image_card">
+
+           </div>
        </div>
    </div>
 </body>
